{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 119,
  "lineage": "6a1cb0fe-eb37-dda9-5933-660b46c33641",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01a00762f46d584a1",
            "arn": "arn:aws:ec2:ap-south-1:127228003271:instance/i-0847f210279a9f159",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_s3_iam_role_profile",
            "id": "i-0847f210279a9f159",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0dcf96c847103e6a7"
              }
            ],
            "primary_network_interface_id": "eni-0dcf96c847103e6a7",
            "private_dns": "ip-10-0-1-239.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.239",
            "public_ip": "65.0.26.9",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b4c5dbf80b43cf07",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051b20b23291772a3",
            "tags": {
              "Name": "prod-web-instance-1"
            },
            "tags_all": {
              "Name": "prod-web-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc55eb8af4066917"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "i-0847f210279a9f159",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2profile",
            "module.iam.aws_iam_role.ec2_s3_role",
            "module.key_pair.aws_key_pair.ec2_key",
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:127228003271:security-group/sg-0bc55eb8af4066917",
            "description": "allow traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc55eb8af4066917",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-prod-sg",
            "name_prefix": "",
            "owner_id": "127228003271",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07b82ff339dcbd552"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "sg-0bc55eb8af4066917",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0daa53509f913153e",
            "arn": "arn:aws:ec2:ap-south-1:127228003271:elastic-ip/eipalloc-0daa53509f913153e",
            "association_id": "eipassoc-035a7bf2192b7fefa",
            "domain": "vpc",
            "id": "eipalloc-0daa53509f913153e",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0bd885e31de2f11e8",
            "private_dns": "ip-10-0-1-191.ap-south-1.compute.internal",
            "private_ip": "10.0.1.191",
            "public_dns": "ec2-3-108-104-149.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.104.149",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "prod-web-eip-1"
            },
            "tags_all": {
              "Name": "prod-web-eip-1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "eipalloc-0daa53509f913153e",
            "region": "ap-south-1"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccda963c61d296e7",
            "arn": "arn:aws:ec2:ap-south-1:127228003271:elastic-ip/eipalloc-0ccda963c61d296e7",
            "association_id": "eipassoc-0ddde48a4025d9569",
            "domain": "vpc",
            "id": "eipalloc-0ccda963c61d296e7",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-03331a0f8f721ec33",
            "private_dns": "ip-10-0-2-27.ap-south-1.compute.internal",
            "private_ip": "10.0.2.27",
            "public_dns": "ec2-13-200-156-15.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.156.15",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "prod-web-eip-2"
            },
            "tags_all": {
              "Name": "prod-web-eip-2"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "eipalloc-0ccda963c61d296e7",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:127228003271:internet-gateway/igw-03bf6dbf4d5457693",
            "id": "igw-03bf6dbf4d5457693",
            "owner_id": "127228003271",
            "region": "ap-south-1",
            "tags": {
              "Name": "prod-web-igw"
            },
            "tags_all": {
              "Name": "prod-web-igw"
            },
            "vpc_id": "vpc-07b82ff339dcbd552"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "igw-03bf6dbf4d5457693",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0daa53509f913153e",
            "association_id": "eipassoc-035a7bf2192b7fefa",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-03d81d1900c9399d2",
            "network_interface_id": "eni-0bd885e31de2f11e8",
            "private_ip": "10.0.1.191",
            "public_ip": "3.108.104.149",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-051b20b23291772a3",
            "tags": {
              "Name": "prod-web-nat-gw-1"
            },
            "tags_all": {
              "Name": "prod-web-nat-gw-1"
            },
            "vpc_id": "vpc-07b82ff339dcbd552"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "nat-03d81d1900c9399d2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccda963c61d296e7",
            "association_id": "eipassoc-0ddde48a4025d9569",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-06ee561d64757cda6",
            "network_interface_id": "eni-03331a0f8f721ec33",
            "private_ip": "10.0.2.27",
            "public_ip": "13.200.156.15",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0546b6957821657fe",
            "tags": {
              "Name": "prod-web-nat-gw-2"
            },
            "tags_all": {
              "Name": "prod-web-nat-gw-2"
            },
            "vpc_id": "vpc-07b82ff339dcbd552"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "nat-06ee561d64757cda6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:127228003271:route-table/rtb-00e5f8231beb1b811",
            "id": "rtb-00e5f8231beb1b811",
            "owner_id": "127228003271",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03d81d1900c9399d2",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-web-private-rt"
            },
            "tags_all": {
              "Name": "prod-web-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b82ff339dcbd552"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "rtb-00e5f8231beb1b811",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:127228003271:route-table/rtb-0dfdc15c0da042b52",
            "id": "rtb-0dfdc15c0da042b52",
            "owner_id": "127228003271",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06ee561d64757cda6",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-web-private-rt"
            },
            "tags_all": {
              "Name": "prod-web-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b82ff339dcbd552"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "rtb-0dfdc15c0da042b52",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:127228003271:route-table/rtb-03d96d86cabc7c1f6",
            "id": "rtb-03d96d86cabc7c1f6",
            "owner_id": "127228003271",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bf6dbf4d5457693",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-web-public-rt"
            },
            "tags_all": {
              "Name": "prod-web-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b82ff339dcbd552"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "rtb-03d96d86cabc7c1f6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032f234a515f6b032",
            "region": "ap-south-1",
            "route_table_id": "rtb-00e5f8231beb1b811",
            "subnet_id": "subnet-0eb9d9713f10e9ded"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "rtbassoc-032f234a515f6b032",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fc54ec005db212d",
            "region": "ap-south-1",
            "route_table_id": "rtb-0dfdc15c0da042b52",
            "subnet_id": "subnet-040cb25048404c20c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "rtbassoc-04fc54ec005db212d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069ac1472a1a628f5",
            "region": "ap-south-1",
            "route_table_id": "rtb-03d96d86cabc7c1f6",
            "subnet_id": "subnet-051b20b23291772a3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "rtbassoc-069ac1472a1a628f5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c29a24070d4bbca5",
            "region": "ap-south-1",
            "route_table_id": "rtb-03d96d86cabc7c1f6",
            "subnet_id": "subnet-0546b6957821657fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "rtbassoc-0c29a24070d4bbca5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:127228003271:subnet/subnet-0eb9d9713f10e9ded",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb9d9713f10e9ded",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127228003271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "prod-web-private-subnet-1"
            },
            "tags_all": {
              "Name": "prod-web-private-subnet-1"
            },
            "vpc_id": "vpc-07b82ff339dcbd552"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "subnet-0eb9d9713f10e9ded",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:127228003271:subnet/subnet-040cb25048404c20c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040cb25048404c20c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127228003271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "prod-web-private-subnet-2"
            },
            "tags_all": {
              "Name": "prod-web-private-subnet-2"
            },
            "vpc_id": "vpc-07b82ff339dcbd552"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "subnet-040cb25048404c20c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:127228003271:subnet/subnet-051b20b23291772a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051b20b23291772a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "127228003271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "prod-web-public-subnet-1"
            },
            "tags_all": {
              "Name": "prod-web-public-subnet-1"
            },
            "vpc_id": "vpc-07b82ff339dcbd552"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "subnet-051b20b23291772a3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:127228003271:subnet/subnet-0546b6957821657fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0546b6957821657fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "127228003271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "prod-web-public-subnet-2"
            },
            "tags_all": {
              "Name": "prod-web-public-subnet-2"
            },
            "vpc_id": "vpc-07b82ff339dcbd552"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "subnet-0546b6957821657fe",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:127228003271:vpc/vpc-07b82ff339dcbd552",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0da5f51690846d2fa",
            "default_route_table_id": "rtb-01d8c50464cfa9225",
            "default_security_group_id": "sg-04e883fe5187fc61a",
            "dhcp_options_id": "dopt-0a17335a9b5b391a1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b82ff339dcbd552",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d8c50464cfa9225",
            "owner_id": "127228003271",
            "region": "ap-south-1",
            "tags": {
              "Name": "prod-web-vpc"
            },
            "tags_all": {
              "Name": "prod-web-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127228003271",
            "id": "vpc-07b82ff339dcbd552",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}